--- a/package.json
+++ b/package.json
@@ -12,19 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:konradmi/react-redux-boilerplate.git"
+    "url": "git@github.com:konradmi/my-react-router-v4.git"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "history": "^4.6.3",
     "react": "15.4.1",
-    "react-dom": "15.4.1",
-    "react-redux": "^4.4.6",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0",
-    "redux-actions": "^2.2.1",
-    "redux-thunk": "^2.2.0"
+    "react-dom": "15.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
