--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["env", "react"],
-  "plugins": ["transform-object-rest-spread", "babel-plugin-transform-decorators-legacy"]
+  "plugins": ["transform-object-rest-spread", "babel-plugin-transform-decorators-legacy", "transform-class-properties"]
 }
