--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "license": "ISC",
   "dependencies": {
     "history": "^4.6.3",
+    "prop-types": "^15.5.10",
     "react": "15.4.1",
     "react-dom": "15.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.1.4",
